# libcaramel

./: .gitignore  .vimspector.json  CMakeLists.txt  Doxyfile  README.md  annotated.html  annotated_dup.js  buildfile  caramel_8hpp_source.html  classcaramel_1_1basic__dynamic__array-members.html  classcaramel_1_1basic__dynamic__array.html  classcaramel_1_1basic__dynamic__array.js  classcaramel_1_1detail_1_1arrow__proxy-members.html  classcaramel_1_1detail_1_1arrow__proxy.html  classcaramel_1_1detail_1_1arrow__proxy.js  classcaramel_1_1dynamic__array-members.html  classcaramel_1_1dynamic__array.html  classcaramel_1_1dynamic__array.js  classcaramel_1_1global__resource-members.html  classcaramel_1_1global__resource.html  classcaramel_1_1global__resource.js  classcaramel_1_1iterator__facade-members.html  classcaramel_1_1iterator__facade.html  classcaramel_1_1iterator__facade.js  classcaramel_1_1memory__allocator-members.html  classcaramel_1_1memory__allocator.html  classcaramel_1_1memory__allocator.js  classcaramel_1_1memory__resource-members.html  classcaramel_1_1memory__resource.html  classcaramel_1_1memory__resource.js  classcaramel_1_1queue.html  classcaramel_1_1random__access__iterator-members.html  classcaramel_1_1random__access__iterator.html  classcaramel_1_1random__access__iterator.js  classcaramel_1_1small__dynamic__array-members.html  classcaramel_1_1small__dynamic__array.html  classcaramel_1_1small__dynamic__array.js  classcaramel_1_1stack.html  classcaramel_1_1strong__type-members.html  classcaramel_1_1strong__type.html  (+138 more)
.bdep/: bdep.sqlite3
.clangd/index/: caeruleum.cpp.082E02C034B2835F.idx  caeruleum.hpp.5911E13A2428D078.idx  driver.cpp.FD20C1126AB91A8A.idx  export.hpp.628DA0B5D470379C.idx
.github/workflows/: documentation.yaml
libcaeruleum/: assert.hpp  buildfile  caeruleum.hpp  containers.hpp  export.hpp  version.hpp.in
libcaeruleum/containers/: binary_tree.hpp  dynamic_array.hpp
libcaeruleum/iterators/: random_access.hpp
libcaramel/: adapter.hpp  buildfile  caramel.hpp  containers.hpp  export.hpp  memory.hpp  version.hpp.in
libcaramel/adapters/: queue.hpp  stack.hpp  stack.mpp
libcaramel/adaptors/: queue.hpp  stack.hpp
libcaramel/containers/: concepts.hpp  deque.hpp  dynamic_array.hpp  linked_array.hpp
libcaramel/iterators/: contiguous_iterator.hpp  iterator_facade.hpp  random_access.hpp  random_iterator.hpp
libcaramel/memory/: allocator.hpp  global_resource.cpp  global_resource.hpp  memory_allocator.hpp  memory_resource.cpp  memory_resource.hpp
libcaramel/util/: crtp.hpp  in_place.hpp  strong_type.hpp  types.hpp
resources/analysis/: chained_group.md
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+9 more)
tests/: CMakeLists.txt
tests/basics/: buildfile  driver  driver.cpp
tests/basics/containers/: dynamic_array.cpp
tests/basics/iterators/: contiguous_iterator.cpp  iterator_facade.cpp  random_access_iterator.cpp
tests/basics/memory/: global_resource.cpp
(+31 files in other folders)
